--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -91,7 +91,6 @@
     opacity: 0.7;
     transition: all 0.5s ease;
     backface-visibility: hidden;
-    border-radius: 12px 12px 0 0;
 }
 /*========*/
 .card:hover{
@@ -112,6 +111,12 @@
 .card:hover .ul {
     transform: translate(0);
     opacity: 1;
+}
+.ul li:last-child {
+    border-radius: 0 0 12px 12px;
+}
+.ul li:first-child {
+    border-radius: 12px 12px 0 0;
 }
 .ul li:hover {
     opacity: 1;
