--- a/src/components/cardList/cardList.css
+++ b/src/components/cardList/cardList.css
@@ -22,6 +22,8 @@
     transition: transform;
 }
 .more-btn:hover{
- opacity: 0.4;
- cursor: pointer;
+    background: transparent;
+    color: #181818;
+    border: 2px solid #181818;
+    cursor: pointer;
 }
