--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -10,8 +10,8 @@
         display: flex;
         align-items: center;
         list-style: none;
-        padding: 0;
-        margin: 0;
+        padding: 28px 0;
+        margin: 0 0 30px 0;
     }
 
 
@@ -51,6 +51,104 @@
         }
     }
 
+    &__post--wrap{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    }
+
+    &__post-list{
+        max-width: 960px;
+        list-style: none;
+        padding: 0 10px 0 0;
+        margin: 0;
+        height: 71vh;
+        overflow-y:scroll;
+
+        &::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+        }
+
+        &::-webkit-scrollbar-thumb {
+        background: #888;
+        border-radius: 40px;
+        }
+    }
+
+    &__post-title{
+        max-width: 412px;
+        font-weight: 800;
+        font-size: 17px;
+        line-height: 27px;
+        margin: 0;
+        color: #030303;
+        
+    }
+
+    &__post-btns-box{
+        display: flex;
+        align-items: center;
+    }
+
+    &__post--btn{
+        padding: 10px 30px;
+        &:not(:last-child){
+            margin-right: 10px;
+        }
+        border-radius: 4px;
+        border: none;
+        cursor: pointer;
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 19px;
+        transition: all 0.4s ease;
+    }
+
+    &__post--btn-cancel,
+    &__post--btn-confirmation:hover{
+        color: #181818;
+        background: #c2c2c2;
+    }
+
+    &__post--btn-confirmation,
+    &__post--btn-cancel:hover{
+        background: #181818;
+        color: #fff;
+    }
+
+
+    &__post--name{
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 16px;
+        color: #030303;
+        opacity: 0.4;
+    }
+
+    &__post--tel{
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 16px;
+        color: #000;
+    }
+
+
+    &__post--texts{
+        max-width: 580px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__post-item{
+        padding: 20px 0;
+        border-bottom:1px solid #000;
+    }
 
     &__col{
         padding-top: 30px;
