--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -14,6 +14,8 @@
         margin: 0 0 30px 0;
     }
 
+    
+
 
     &__btns-btn{
         cursor: pointer;
@@ -249,4 +251,8 @@
         color: #030303;
         opacity: 0.3;
     }
+}
+
+.remove-slider{
+    display: none;
 }
