--- a/src/components/addCard/addCard.css
+++ b/src/components/addCard/addCard.css
@@ -125,5 +125,20 @@
     border: 2px solid #181818;
     background: #02080D;
     box-sizing: border-box;
+}
 
+.add-card__checkbox {
+   margin-top: -43px;
+   margin-left: 36px 
+}
+.check-div{
+    width: 450px;
+}
+.Link-input{
+    font-weight: 500;
+font-size: 12px;
+line-height: 14px;
+text-decoration-line: underline;
+
+color: #0094FF;
 }
