--- a/src/components/addCard/addCard.css
+++ b/src/components/addCard/addCard.css
@@ -44,12 +44,43 @@
 .M-input {
     Width: 280px;
     Height: 40px;
-    padding: 12px 20px;
+    padding: 10px 20px;
 }
 
 .S-label {
     Width: 196px;
     Height: 16px;
+}
+
+.post-input-format-text{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: #181818;
+    
+}
+
+button{
+    cursor: pointer;
+}
+
+.post-input-format-text:nth-child(1){
+    margin-bottom: 10px;
+}
+
+.post-inputs-wraps{
+    display: flex;
+}
+
+.post-input-format{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+
+.post-input-wrap{
+    display: flex;
 }
 
 .S-input {
