--- a/src/components/checked/checked.css
+++ b/src/components/checked/checked.css
@@ -2,6 +2,7 @@
 .checkbox {
 	opacity: 0;
 	position: absolute;
+	display: none;
 }
 
 .label {
@@ -15,6 +16,20 @@
 	height: 36px;
 	width: 18px;
 	transform: scale(1.5);
+	margin: 20px 0;
+}
+
+.post-input-wrap-link{
+	margin-right: 70px;
+	font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #9F9F9F;
+}
+
+.post-input-format--wrap{
+	display: flex;
+	align-items: center;
 }
 
 .label .ball {
@@ -30,5 +45,5 @@
 }
 
 .checkbox:checked + .label .ball {
-	transform: translateY(24px);
+	transform: translateY(18px);
 }
