--- a/src/components/checked/checked.css
+++ b/src/components/checked/checked.css
@@ -16,7 +16,6 @@
 	height: 36px;
 	width: 18px;
 	transform: scale(1.5);
-<<<<<<< HEAD
 	margin: 20px 0;
 }
 
@@ -31,9 +30,6 @@
 .post-input-format--wrap{
 	display: flex;
 	align-items: center;
-=======
-	margin-top: 20px;
->>>>>>> ae872aa255055bc2360838af755cc6422e44795a
 }
 
 .label .ball {
@@ -47,7 +43,6 @@
 	transform: translateX(0px);
 	transition: transform 0.2s linear;
 }
-
-.checkbox:checked + .label .ball {
-	transform: translateY(18px);
+.toggle{
+	transform: translateY(18px) !important;
 }
