--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -9,11 +9,34 @@
     align-items: center;
 }
 
+.drowpdown__wrap{
+    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search-btn{
+    margin: 5px 0;
+    background: #181818 !important;
+    color: #fff;
+    transition: all 0.4s ease;
+}
+
+.search-btn:hover{
+    background: transparent !important;
+    color: #181818;
+}
+.search-div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 .dropbtn {
     width: 175px;
     height: 40px;
-    padding: 2px 23px;
+    padding: 2px 13px;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -93,7 +116,7 @@
 }
 
 .search-div__input {
-    max-width: 472px;
+    max-width: 300px;
     Height: 50px;
     width: 100%;
     background: hsl(220, 9%, 86%);
@@ -101,7 +124,7 @@
     border-radius: 8px;
     outline: none;
     border: none;
-    padding: 0 30px 0 50px;
+    padding: 0 20px 0 50px;
 }
 
 .search-div__icon {
